--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "barryvdh/laravel-cors": "^0.11.2",
         "fideloper/proxy": "~3.3",
+        "laravel/cashier": "~7.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "tymon/jwt-auth": "0.5.*"
